Fixed styling issue on Galaxy S5 where price and logo would wrap

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -84,3 +84,9 @@
     margin: 0 1rem!important;
   }
 }
+
+@media only screen and (max-width: 375px) {
+  .checkout h4 {
+    font-size: 1.25rem;
+  }
+}
